link-icon color

--- a/css/style.css
+++ b/css/style.css
@@ -1064,7 +1064,7 @@ hamburger
           font-size: 1.4em;
           text-transform: capitalize;
           font-family: "Gruppo", cursive;
-          color: #ead2a1;
+          color: #fff;
           font-weight: 500;
           position: absolute;
           left: 50%;
