--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -188,7 +188,7 @@
                     font-size: 1.4em;
                     text-transform: capitalize;
                     font-family: $font-gruppo;
-                    color: $span-gold;
+                    color: $text-light;
                     font-weight: 500;
                     position:absolute;
                     left: 50%;
