--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -328,3 +328,19 @@ hamburger
     }
 }
 // end of back to top button
+
+// SCROLL OUT
+[data-scroll] {
+    transition: 1s;
+    transform: scale(.5);
+}
+
+[data-scroll="in"] {
+    opacity: 1;
+    transform: scale(1);
+}
+
+[data-scroll="out"] {
+    opacity: 0;
+}
+// END OF SCROLL OUT
