--- a/scss/style.scss
+++ b/scss/style.scss
@@ -164,7 +164,7 @@ body {
                                 opacity: 1;
 
                                 i {
-                                    transition: 1s ease 1s;
+                                    transition: 1s ease .8s;
                                     color: $span-gold;
                                 }
 
