--- a/css/style.css
+++ b/css/style.css
@@ -293,8 +293,9 @@ hamburger
     line-height: 2em; }
     @media (min-width: 768px) {
       #skills .skills-top p {
-        font-size: 1em; } }
+        font-size: 1.2em; } }
     #skills .skills-top p span {
+      font-size: 1em;
       color: #ead2a1; }
   #skills .skills-top::after {
     content: '';
@@ -818,7 +819,7 @@ hamburger
         #projects .projects .all-projects .project-item .project-tile a {
           color: #fff;
           background: #333;
-          margin: .5em 0;
+          margin: .5em 0 .5em;
           padding: .5em;
           border: none;
           outline: none;
@@ -839,24 +840,24 @@ hamburger
             color: #ead2a1;
             font-size: .8em;
             padding: .2em;
-            margin-right: .5em; }
+            margin: 1em 0 .5em 0; }
             #projects .projects .all-projects .project-item .project-tile a i::after {
               content: 'view project';
               font-family: "Gruppo", cursive;
               font-style: italic;
-              color: #ead2a1;
+              color: #fff;
+              font-weight: 600;
               transition: .3s;
+              background: linear-gradient(0deg, #3f0d0d, #dc134c);
+              border-radius: 10px;
+              padding: .5em;
               opacity: 0;
-              margin-left: 1em;
               transition: .3s ease; }
           #projects .projects .all-projects .project-item .project-tile a:hover h2 {
             color: #ead2a1; }
           #projects .projects .all-projects .project-item .project-tile a:hover i {
-            color: #ead2a1; }
-            #projects .projects .all-projects .project-item .project-tile a:hover i::after {
-              color: #ddd;
-              margin-left: .2em;
-              letter-spacing: 0; }
+            color: #fff;
+            transform: translateX(0.5em); }
       #projects .projects .all-projects .project-item .project-img {
         flex-basis: 50%;
         width: 100%;
@@ -912,11 +913,9 @@ hamburger
         transform: scale(1.1); }
       #projects .projects .all-projects .project-item:hover.project-item .project-img::after {
         opacity: .7; }
-      #projects .projects .all-projects .project-item:hover.project-item .project-tile a i {
-        transform: scale(1.15) translateX(0.5em); }
-        #projects .projects .all-projects .project-item:hover.project-item .project-tile a i::after {
-          opacity: 1;
-          letter-spacing: .2em; }
+      #projects .projects .all-projects .project-item:hover.project-item .project-tile a i::after {
+        opacity: 1;
+        margin-left: .5em; }
 
 #footer {
   background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
@@ -1981,7 +1980,7 @@ body {
           float: left;
           background: #29323c;
           color: #ead2a1;
-          padding: 0 .2em 0 .1em;
+          padding: 0 .1em;
           margin-right: .1em;
           border-radius: 2px;
           box-shadow: -3px 3px 0 #4855634b; }
@@ -1991,7 +1990,6 @@ body {
           transition: opacity 4s ease;
           opacity: 0;
           display: none;
-          background-color: #f4f4f4;
           margin-bottom: .5em; }
         @media (min-width: 768px) {
           .about .col-right article.about-article p {
