--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -65,17 +65,18 @@
         }
 
         p {
-            color: $text-white;
+            color: $text-light;
             font-size: .8em;
             font-weight: 500;
             @media (min-width: 768px){
-                font-size: 1em;
+                font-size: 1.2em;
             }
             background: transparent;
             overflow: hidden;
             line-height: 2em;
 
             span {
+                font-size: 1em;
                 color: $span-gold;
             }
         }
